# GAR

./: .gitignore  README.md  pyproject.toml
configs/: qwen_gar.yaml  qwen_gar_paper.yaml
data/: discriminator_sft_local.jsonl  eval_comprehensive.jsonl  train_local.jsonl
scripts/: build_discriminator_sft_data.py  build_discriminator_sft_merge.py  build_discriminator_sft_negative.py  build_discriminator_sft_positive.py  check_reasoning_coverage.py  eval_math.py  inspect_dataset.py  setup_tamus_llm.sh  train_discriminator_sft.py  train_gar.py
scripts/slurm/: 00_setup_env.sh  01_download_models.sh  02_build_sft_data.slurm  02_build_sft_negative.slurm  03_train_discriminator_sft.slurm  04_train_gar.slurm  05_eval.slurm
src/gar/: __init__.py  config.py  data.py  modeling.py  openai_labeler.py  parsing.py  prompts.py  rewards.py  slicing.py  utils.py
src/gar_repro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
